Added Commands and Permissions
Added bedrocktweaker.* and 3 commands.

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,10 +1,28 @@
 name: BedrockTweaker
-author: EventfulDeer48
+authors: [EventfulDeer48, RedCraftPE]
 version: 0.0.1-ALPHA(Unstable!)
 api: 3.0.0, 4.0.0
 main: EventfulDeer48\main
 commands:
-  bedrocktweakerconfig:
-    description: Configuration for BedrockTweaker.
-    usage: /bedrocktweakerconfig
-    aliases: [btconfig, btweakerconfig, bedrocktweakersettings, btsettings]
+  bedrocktweakertoggle:
+    description: Turns on or off breakable bedrock.
+    usage: /bedrocktweakertoggle
+    aliases: [bttoggle]
+  bedrocktweakersethardness:
+    description: Sets the hardness of bedrock (how long it takes to break it).
+    usage: /bedrocktweakersethardness
+    aliases: [btsethardness, bthardness]
+  bedrocktweakersetblastresistance:
+    description: Sets the blast resistance of bedrock (how resistant it is to blast damage).
+    usage: /bedrocktweakersetblastresistance
+    aliases: [btsetblastresistance, btblastresistance, btsetresistance, btresistance]
+permissions:
+  bedrocktweaker.*:
+    default: op
+    children:
+      bedrocktweaker.toggle:
+        default: op
+        description: With this permission players will be able to turn on and off breakable bedrock.
+      bedrocktweaker.setbedrock:
+        default: op
+        description: With this permission players will be able to change the Hardness and Blast Resistance of Bedrock.
