--- a/plugin.yml
+++ b/plugin.yml
@@ -12,6 +12,9 @@ commands:
     description: Sets the blast resistance of bedrock (how resistant it is to blast damage).
     usage: /bedrocksetblastresistance
     aliases: [bsetblastresistance, bblastresistance, bsetresistance, bresistance]
+  bedrockstats:
+    usage: /bedrockstats
+    aliases: bstats
 permissions:
   bedrocktweaker.*:
     default: op
@@ -19,3 +22,6 @@ permissions:
       bedrocktweaker.setbedrock:
         default: op
         description: With this permission players will be able to change the Hardness (How hard bedrock is) and the Blast Resistance (The resistance to blast damage) of bedrock.
+      bedrocktweaker.stats:
+        default: op
+        description: With this permission players will be able to see the current values of Hardness and Blast Resistance of Bedrock.
